IRP-21: Added field on UI for vendor to enter ART URL, ART username, and ART password